fuel/modules/fuel/assets/css/fuel.css
/* ... */
div.boxbuttons li a { display: block; text-align: center; padding: 25px 5px 5px 5px; width: 100px; height: 20px; background-color: #fff; background-repeat: no-repeat; background-position: center 5px;}
div.boxbuttons li a:hover { background-color: #f6f6f6; }

/* notification */
div#fuel_notification { height: 21px; border-bottom: 1px solid #ccc; background-color: #ecf1f5; text-overflow: ellipsis; overflow: hidden; position: relative; }
div.notification p, div.notification div, div.notification ul {  margin: 0; min-height: 15px; line-height: 15px; padding: 3px 0 3px 35px; list-style: none; background-repeat: no-repeat; background-position: 15px 3px; list-style: none; }
div.notification .ico { line-height: 15px; }

/* pagination */
div#pagination { position: absolute; z-index: 1; right: 0px; top: -3px; text-align: right; padding-right: 25px; }
div#pagination a { line-height: 21px; padding: 0 3px; border: 1px solid #ccc; background-color: #f9f9f9; }
div#pagination a:hover { background-color: #fdfdfd; } 
div#pagination b { color: #fff; background-color: #4f7193; line-height: 21px; padding: 0 3px; border: 1px solid #ccc;  }


/* data table */
div#table_loader { position: absolute; top: 20px; left: 50%; margin-left: -25px; z-index: 2;}
div#data_table_container { padding: 6px 0; }
#data_table .publish_hover:hover .publish_action { display: inline; }
#data_table .publish_hover:hover .publish_text { display: none; }

table#data_table.rearrange tr:hover td { cursor: move !important; background-color: #ffe !important; }
table.data { width: 98%; margin: 0px auto; }
table.data th { padding: 0 20px 0 0; white-space: nowrap; }
table.data td { padding: 5px 20px;  border-top: 1px solid #fff; white-space: nowrap; max-width: 300px; text-overflow: ellipsis; overflow: hidden; }
table.data th.on, table.data th.on a { color: #4f7193; }
table.data th a { text-decoration: underline; }
table.data th a, table.data th span { color: #333; display: block; line-height: 22px; padding: 0 0 0 20px; width: 100%; border-left: 1px solid #fff;}
table.data th.asc a { background: transparent url(../images/th_arrow_asc.png) no-repeat 5px center; }
table.data th.desc a { background: transparent url(../images/th_arrow_desc.png) no-repeat 5px center; }
table.data th { text-align: left; }
table.data td.next_last { width: 100%; }
table.data td.actions { text-align: right; white-space: nowrap; padding-left: 5px; }
table.data tr.rowaction:hover td { background-color: #edf2f7 !important; cursor: pointer; }
table.data th.col1 { min-width: 200px; }
table.data tr.alt { background-color: #f3f3f3; }
div.nodata { text-align: center; padding: 10px 0 15px 0;}

/* specific data column classes */
span.publish_col { width: 100px; display: block; cursor: pointer !important; }

/* form tables */
.form { border: none; border-spacing: 0; display: table; } /* important to display as table so that the proper width can be determined with inline editing */
.form td.label { padding: 6px 15px 0 0; font-weight: bold; vertical-align: top; }
.form td.value { padding: 3px 0;vertical-align: top; white-space: nowrap; }
.form td.required { padding-top: 10px; }
div.more_filters { padding-left: 10px; }
div.more_filters span.label { float: left; padding-top: 6px; }
div.more_filters span.field { float: left; display: block; padding: 0 0 0 5px;  }
div.more_filters div div { float: left; margin-right: 10px; }

/* tree */
div#tree_container { padding: 16px 15px; }
div#tree_loader { position: absolute; top: 20px; left: 50%; margin-left: -25px; z-index: 2;}

/* #login */
div#login { margin: 50px auto 0 auto; background-color: #ffffff; border: 10px solid #797979; width: 558px; min-height: 270px; position: relative; padding-bottom: 20px; }
img#login_logo { margin: 20px auto 10px auto; }
div#login h1 { background: none; font-size: 16px; margin-bottom: 0; margin-left: 92px;}
div#login_inner { width: 400px; margin: 10px auto 0 auto; position: relative; }
div#login_inner table { margin: 0 auto 0 auto; }
div#login_inner .form { display: block; }
div#login_notification { text-overflow: ellipsis; overflow: hidden;  margin-bottom: 5px; margin-left: -15px; margin-right: -15px; }
a#login_btn { width: 60px; }
div#login_footer { position: absolute; width: 558px; bottom: -35px; }
a#forgotten_pwd { text-align: center; display: block; padding-top: 15px; padding-left:20px; }

/* assets & modal */
a.modal_close { position: absolute; left: -11px; top: -11px; z-index: 10; background: transparent url(../images/x_close.png) no-repeat center center; width: 23px; height: 23px; text-indent: -10000px; overflow:hidden; }
div.modal_content {  -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px;background-color: #fff; width: 100%; height: 100%;/*max-height: 450px;*/ overflow: hidden; }
div.modal_content iframe { width: 100% !important; }
div.modal_content_inner { padding: 10px 20px; }

div#asset_preview { height: 275px; width: 740px; overflow: auto; text-align: center; margin: 10px 0 20px 0;}
div.asset_select > div > div { float: left; }
div.asset_select span.label { padding: 0 5px 0 15px; }
div.asset_select div.actions { padding-top: 50px; float: left; }
div.img_crop { max-width: 400px; max-height: 200px; overflow: auto; }
div#yes_no_modal { text-align: center; margin: 0; }
div#yes_no_modal ul { float: none; }
div#yes_no_modal li { display: inline-block; margin-right: 5px; float: none;}

div#__FUEL_modal__ { -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; width: 98%; max-width: 864px; margin-left: -425px; max-height: 508px; background-color: #fff; }
div#__FUEL_modal__ .add_inline_button, div#__FUEL_modal__ .edit_inline_button { display: none; }
div.img_display { float: right; overflow: auto; height: 120px; width: 300px; }


div.viewpage_modal { top: 16px; border: 2px solid #666; background-color: #fff; height: 96% !important; width: 96% !important; max-width: 96% !important; max-height: 96% !important; padding: 0; display: none; }
/* ... */

